[package]
name = "bezier"
version = "0.1.0"
edition = "2021"
authors = ["Mahdi K. Fard"]
description = "Bezier Curve package for Rust."
license = "MIT"
documentation = "https://docs.rs/bezier"
repository = "https://github.com/xclud/rust_bezier"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
